# ext-cardano-utxorpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  controller.yml  proxy.yml
bootstrap/: main.tf  output.tf  variables.tf
bootstrap/cell/: main.tf  variables.tf
bootstrap/cloudflared/: config.tf  config.yml.tfpl  credentials.tf  deployment.tf  main.tf  monitor.tf
bootstrap/configs/: cardano-mainnet.toml  cardano-preprod.toml  main.tf  mainnet.toml  preprod.toml  preview.toml  vector-testnet.toml
bootstrap/crds/: main.tf
bootstrap/feature/: certs.tf  main.tf  monitor.tf  operator.tf  rbac.tf  tls.key
bootstrap/instance/: main.tf  sts.tf
bootstrap/proxy/: cert.tf  certs.tf  deployment.tf  main.tf  monitor.tf  output.tf  service.tf  tls.crt
bootstrap/pvc/: main.tf
bootstrap/service/: main.tf
bootstrap/services/: main.tf
docker/: dockerfile.operator  dockerfile.proxy
examples/: manifest.yaml  setup
operator/: Cargo.toml  README.md
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  utils.rs
operator/yaml/: crd.yaml  port.yaml
proxy/: Cargo.toml  README.md
proxy/src/: auth.rs  config.rs  health.rs  main.rs  proxy.rs
scripts/: crd.sh  fabric-migration.sh
snapshot-updater/: config.tf  cronjob.tf  dolos.toml.tftpl  main.tf  pvc.tf  script.sh.tftpl
