[package]
name = "operator"
version = "0.1.2"
edition = "2021"
default-run = "controller"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.29"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["runtime", "client", "derive"] }
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde_yaml = "0.9.25"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prometheus = "0.13.3"
lazy_static = "1.4.0"
bech32 = "0.9.1"
argon2 = "0.5.2"
base64 = "0.21.5"
reqwest = { version = "0.11.23", features = ["json"] }
chrono = "0.4.31"
regex = "1.10.2"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }

[[bin]]
name = "controller"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[lib]
path = "src/lib.rs"

