[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operator = { path = "../operator" }
pingora = { version = "0.1.0", features = ["proxy"] }
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
regex = "1.10.3"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
