[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operator = { path = "../operator" }
async-trait = "0.1.77"
dotenv = "0.15.0"
futures-util = "0.3.30"
pingora = { version = "0.3.0", features = ["proxy"] }
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
prometheus = "0.13.3"
notify = "6.1.1"
bytes = "1.7.1"
